--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/iris.jpg-circled.png" alt="iris bello bello"></td>
+      <td> <img src="CV/iris.jpg-circled.png"></td>
       <td>
         <h1>Alessandra </h1>
         <p> <em><a href="images/medicine.jpg">PhD</a></em></p>
